HOWTO/KUBERNETES/EXAMPLE/example_combo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teste
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teste-deployment
  name: teste-deployment
  namespace: teste
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teste-deployment
  template:
    metadata:
      labels:
        app: teste-deployment
    spec:
      containers:
      - image: nginx:stable
        name: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: teste-config
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: teste-config
          configMap:
            name: teste-config         
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: teste-deployment
  name: teste-deployment
  namespace: teste
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: teste-deployment
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: teste-ingress
  namespace: teste
spec:
  rules:
  - host: teste.info
    http:
      paths:
      - backend:
          serviceName: teste-deployment
          servicePort: 8080
        path: /
        pathType: Prefix
